--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,11 @@
 html{
 	font-size: 62.5%;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 *, *:before, *:after {
-          box-sizing: inherit;
+          -webkit-box-sizing: inherit;
+                  box-sizing: inherit;
 }
 body{
 	min-height: 100vh;
@@ -28,17 +30,25 @@ header{
 	}
 }
 section{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
  	width: 60rem;
  	margin: 0 auto;
  	padding: 0 0 3rem 0;
  	border-radius: 1.5rem;
  	background: rgba(0,0,0,0.1);
  	-webkit-box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 60px 0px rgba(0,0,0,0.75);
 	.calc-input{
 		width: 100%;
@@ -90,24 +100,33 @@ section{
 			float: left;
 			width: 80%;
 			margin-bottom: 1rem;
+			display: -webkit-box;
+			display: -ms-flexbox;
 			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-around;
+			-ms-flex-wrap: wrap;
+			    flex-wrap: wrap;
+			-ms-flex-pack: distribute;
+			    justify-content: space-around;
 			button{
 				font-family: $font;
 				border: none;
 				outline: none;
 				font-size: 2.5rem;
-				flex: 1 30%;
+				-webkit-box-flex: 1;
+				    -ms-flex: 1 30%;
+				        flex: 1 30%;
 				padding: $padding-button*0.8;
 				border-radius: .5rem;
 				margin: 0.5rem;
+				-webkit-transition: 0.4s;
 				transition: 0.4s;
 				z-index: 10;
 				position: relative;
-				flex: 1 20%;
+				-ms-flex: 1 20%;
+				    flex: 1 20%;
 				background-color: rgba(221, 65, 66, 0.8); 
-				box-shadow: none;
+				-webkit-box-shadow: none; 
+				        box-shadow: none;
 				overflow: hidden;
 				&:nth-child(4){
 					background: AntiqueWhite;
@@ -126,15 +145,21 @@ section{
 				&:hover:after{
 					z-index: -1;
 					height: 100%;
+					-webkit-transition: 0.3s;
 					transition: 0.3s;
-					box-shadow: none;
+					-webkit-box-shadow: none;
+					        box-shadow: none;
 				}
 			}
 		}
 		&__numbers{
+			display: -webkit-box;
+			display: -ms-flexbox;
 			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-around;
+			-ms-flex-wrap: wrap;
+			    flex-wrap: wrap;
+			-ms-flex-pack: distribute;
+			    justify-content: space-around;
 			background: none;
 			float: left;
 			width: 80%;
@@ -146,20 +171,24 @@ section{
 				background-color: rgba(0,0,0,0.3);
 				color: White;
 				font-size: 2.5rem;
-				flex: 1 30%;
+				-webkit-box-flex: 1;
+				    -ms-flex: 1 30%;
+				        flex: 1 30%;
 				padding: $padding-button*0.8;
 				border-radius: .5rem;
 				margin: 2.5rem 0.5rem;
+				-webkit-transition: 0.4s;
 				transition: 0.4s;
 				&:hover{
 					cursor: pointer;
 					-webkit-box-shadow: 6px 4px 5px 0px rgba(0,0,0,0.15);
-					-moz-box-shadow: 6px 4px 5px 0px rgba(0,0,0,0.15);
 					box-shadow: 6px 4px 5px 0px rgba(0,0,0,0.15);
 					background-color: grey;
 				}
 				&:last-child{
-					flex: 2 60%;
+					-webkit-box-flex: 2;
+					    -ms-flex: 2 60%;
+					        flex: 2 60%;
 				}
 				
 			}
@@ -168,10 +197,18 @@ section{
 			float: left;
 			width: 19%;
 			background: none;
+			display: -webkit-box;
+			display: -ms-flexbox;
 			display: flex;
-			flex-wrap: no-wrap;
-			flex-direction: column;
-			align-items: center;
+			-ms-flex-wrap: no-wrap;
+			    flex-wrap: no-wrap;
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: normal;
+			    -ms-flex-direction: column;
+			        flex-direction: column;
+			-webkit-box-align: center;
+			    -ms-flex-align: center;
+			        align-items: center;
 			button{
 				font-family: $font;
 				position: relative;
@@ -185,8 +222,8 @@ section{
 				border: none;
 				outline: none;
 				-webkit-box-shadow: 6px 5px 24px -4px rgba(0,0,0,0.39);
-				-moz-box-shadow: 6px 5px 24px -4px rgba(0,0,0,0.39);
 				box-shadow: 6px 5px 24px -4px rgba(0,0,0,0.39);
+				-webkit-transition: 0.4s;
 				transition: 0.4s;
 				&:after{
 					z-index: -1;
@@ -200,7 +237,9 @@ section{
 					left: 50%;
 					margin-top: -($button-radius*0.8)/2;
 					margin-left: -($button-radius*0.8)/2;
-					transform: scale(0);
+					-webkit-transform: scale(0);
+					        transform: scale(0);
+					-webkit-transition: 0.4s;
 					transition: 0.4s;
 				}
 				&:nth-child(1){
@@ -222,7 +261,8 @@ section{
 					color: white;
 					cursor: pointer;
 					&:after{
-						transform: scale(1);
+						-webkit-transform: scale(1);
+						        transform: scale(1);
 					}
 				}
 			}
@@ -251,7 +291,9 @@ section{
 				button{
 					padding: $padding-button*0.5;
 					font-size: 1.7rem;
-					flex: 1 28%;
+					-webkit-box-flex: 1;
+					    -ms-flex: 1 28%;
+					        flex: 1 28%;
 				}
 			}
 			&__functions{
